finished volcano plots

--- a/Analyze_DESeq2_Human_results.ipynb
+++ b/Analyze_DESeq2_Human_results.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "      <th>0</th>\n",
        "      <td>TAGLN2</td>\n",
        "      <td>3702.951794</td>\n",
-       "      <td>2.954344</td>\n",
+       "      <td>-2.954344</td>\n",
        "      <td>0.056286</td>\n",
        "      <td>52.488180</td>\n",
        "      <td>0.0</td>\n",
@@ -70,7 +70,7 @@
        "      <th>1</th>\n",
        "      <td>UHMK1</td>\n",
        "      <td>3543.839403</td>\n",
-       "      <td>3.225018</td>\n",
+       "      <td>-3.225018</td>\n",
        "      <td>0.067672</td>\n",
        "      <td>47.656533</td>\n",
        "      <td>0.0</td>\n",
@@ -80,7 +80,7 @@
        "      <th>2</th>\n",
        "      <td>CSRP1</td>\n",
        "      <td>4592.587776</td>\n",
-       "      <td>-1.856967</td>\n",
+       "      <td>1.856967</td>\n",
        "      <td>0.046232</td>\n",
        "      <td>-40.165842</td>\n",
        "      <td>0.0</td>\n",
@@ -90,7 +90,7 @@
        "      <th>3</th>\n",
        "      <td>CAPN2</td>\n",
        "      <td>10417.715365</td>\n",
-       "      <td>-2.116233</td>\n",
+       "      <td>2.116233</td>\n",
        "      <td>0.045564</td>\n",
        "      <td>-46.445277</td>\n",
        "      <td>0.0</td>\n",
@@ -100,7 +100,7 @@
        "      <th>4</th>\n",
        "      <td>RHOB</td>\n",
        "      <td>10401.154292</td>\n",
-       "      <td>1.758295</td>\n",
+       "      <td>-1.758295</td>\n",
        "      <td>0.045384</td>\n",
        "      <td>38.742385</td>\n",
        "      <td>0.0</td>\n",
@@ -112,20 +112,21 @@
       ],
       "text/plain": [
        "   GeneID     Base mean  log2(FC)    StdErr  Wald-Stats  P-value  P-adj\n",
-       "0  TAGLN2   3702.951794  2.954344  0.056286   52.488180      0.0    0.0\n",
-       "1   UHMK1   3543.839403  3.225018  0.067672   47.656533      0.0    0.0\n",
-       "2   CSRP1   4592.587776 -1.856967  0.046232  -40.165842      0.0    0.0\n",
-       "3   CAPN2  10417.715365 -2.116233  0.045564  -46.445277      0.0    0.0\n",
-       "4    RHOB  10401.154292  1.758295  0.045384   38.742385      0.0    0.0"
+       "0  TAGLN2   3702.951794 -2.954344  0.056286   52.488180      0.0    0.0\n",
+       "1   UHMK1   3543.839403 -3.225018  0.067672   47.656533      0.0    0.0\n",
+       "2   CSRP1   4592.587776  1.856967  0.046232  -40.165842      0.0    0.0\n",
+       "3   CAPN2  10417.715365  2.116233  0.045564  -46.445277      0.0    0.0\n",
+       "4    RHOB  10401.154292 -1.758295  0.045384   38.742385      0.0    0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "human = pd.read_csv('data/DESeq2/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID', 'Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj'])\n",
+    "human = pd.read_csv('DESeq2/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID', 'Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj'])\n",
+    "human['log2(FC)'] = (human['log2(FC)'] * -1)\n",
     "human.head()"
    ]
   },
@@ -394,11 +395,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## III. Top up and Down Genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['TAGLN2', 'UHMK1', 'RHOB', 'EIF4G1', 'ESM1', 'G3BP1', 'ATP6V0E1',\n",
+       "        'SQSTM1', 'RNF144B', 'YWHAG', 'CAV1', 'ANKRD1', 'SWAP70', 'FZD4',\n",
+       "        'PXN', 'WARS', 'NORAD', 'CSF2RB', 'TMSB4X', 'SAT1', 'APLN',\n",
+       "        'AMOTL2', 'NRG1', 'TNFRSF21', 'RND3', 'TNFRSF10B', 'EPHA2', 'YWHAZ',\n",
+       "        'MPZL3', 'CTTN', 'DCUN1D3', 'GALNT1', 'CCND1', 'TLN1', 'DKK1',\n",
+       "        'PCDH1', 'SDC4', 'GDF15', 'PGF', 'CXorf36', 'CLDN5', 'CENPF',\n",
+       "        'FKBP1A', 'RALBP1', 'FAM124B', 'DOCK9', 'PRRC2B', 'BSG', 'CCNA1',\n",
+       "        'PERP', 'EI24', 'MPZL2', 'TOP2A', 'RASSF3', 'GLT25D1', 'MX1',\n",
+       "        'STOM', 'SF3B3', 'ACTG1', 'STX3', 'SDCBP', 'TRIM22', 'DAB2', 'NTN4',\n",
+       "        'UBA1', 'YES1', 'ZC3H7B', 'BACE2', 'SARAF', 'ZNF106', 'ASPM',\n",
+       "        'IFI6', 'ELMOD1', 'RBMS2', 'PNP', 'BSDC1', 'SCAMP2', 'USP28',\n",
+       "        'CMPK2', 'GPRC5A', 'UBE2L6', 'MDM2', 'SNTB2', 'RAB3B', 'ALDH1A1',\n",
+       "        'CBFB', 'RRP1B', 'UBE2H', 'CBX1', 'FBLIM1', 'VMP1', 'IFITM1',\n",
+       "        'HLA-B', 'RTCB', 'RNF14', 'RSAD2', 'TP53INP1', 'HIST1H1B',\n",
+       "        'FAM107B', 'POLR3G'], dtype=object),\n",
+       " array(['CSRP1', 'CAPN2', 'ADAM23', 'STT3B', 'FSTL1', 'AP2M1', 'IL6ST',\n",
+       "        'SCARA3', 'IMPAD1', 'DKK3', 'ENDOD1', 'MGP', 'DPYSL2', 'SLC39A6',\n",
+       "        'SEPT9', 'ADD3', 'ARPC2', 'EXT2', 'DLG1', 'PCYOX1', 'GUCY1A2',\n",
+       "        'SEMA3A', 'IGFBP7', 'FLNA', 'CCNG1', 'FLRT2', 'PLA2G16', 'APLP2',\n",
+       "        'SUSD5', 'PLAT', 'DPP4', 'RECK', 'CAMK2D', 'KIF1C', 'SAMD9', 'CCNY',\n",
+       "        'MAOA', 'LRRC8A', 'STXBP5', 'WNK1', 'SYT11', 'METTL7A', 'MAP1A',\n",
+       "        'TGFBR2', 'GAPDH', 'FLNC', 'MBD2', 'SERPINH1', 'PPP1R3C', 'VCL',\n",
+       "        'COL1A2', 'CYBRD1', 'CHD3', 'ZDHHC20', 'FBN1', 'SERP1', 'FAM171A1',\n",
+       "        'SLCO2A1', 'ZNF518B', 'FADS1', 'CFAP54', 'CFH', 'CCDC80', 'SCN9A',\n",
+       "        'ZNF521', 'CBX5', 'MAP4K2', 'IGF2BP2', 'MYH10', 'LIMCH1', 'ERV3-1',\n",
+       "        'JAK3', 'MAPK6', 'HMOX1', 'DIXDC1', 'EML1', 'CCDC88A', 'IGFBP4',\n",
+       "        'MTCH1', 'BACE1', 'FAM63B', 'TMCO1', 'RPS6KA3', 'HMGA2', 'WIPI1',\n",
+       "        'CNTNAP1', 'PIEZO2', 'GBP1', 'SEPT2', 'FADS2', 'PLCB3', 'SPTBN5',\n",
+       "        'RNF149', 'VEPH1', 'MAP3K12', 'MMP16', 'MYOF', 'APP', 'LAMP2',\n",
+       "        'PLTP'], dtype=object))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "human[human['log2(FC)'] < 0][:100]['GeneID'].values, human[human['log2(FC)'] > 0][:100]['GeneID'].values"
+   ]
   },
   {
    "cell_type": "code",
