Add MSigDB to Bar plot, fix bug in volcano plot

--- a/Serialize_DESeq_Data_to_JSON.ipynb
+++ b/Serialize_DESeq_Data_to_JSON.ipynb
@@ -400,281 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III. Serialize Gene Ontology to JSON"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GeneSymbol</th>\n",
-       "      <th>GO_ID</th>\n",
-       "      <th>GO_term</th>\n",
-       "      <th>Evidence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>GO:0002576</td>\n",
-       "      <td>platelet degranulation</td>\n",
-       "      <td>TAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>GO:0008150</td>\n",
-       "      <td>biological_process</td>\n",
-       "      <td>ND</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>GO:0043312</td>\n",
-       "      <td>neutrophil degranulation</td>\n",
-       "      <td>TAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A2M</td>\n",
-       "      <td>GO:0001869</td>\n",
-       "      <td>negative regulation of complement activation, ...</td>\n",
-       "      <td>IDA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A2M</td>\n",
-       "      <td>GO:0002576</td>\n",
-       "      <td>platelet degranulation</td>\n",
-       "      <td>TAS</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  GeneSymbol       GO_ID                                            GO_term  \\\n",
-       "0       A1BG  GO:0002576                             platelet degranulation   \n",
-       "1       A1BG  GO:0008150                                 biological_process   \n",
-       "2       A1BG  GO:0043312                           neutrophil degranulation   \n",
-       "3        A2M  GO:0001869  negative regulation of complement activation, ...   \n",
-       "4        A2M  GO:0002576                             platelet degranulation   \n",
-       "\n",
-       "  Evidence  \n",
-       "0      TAS  \n",
-       "1       ND  \n",
-       "2      TAS  \n",
-       "3      IDA  \n",
-       "4      TAS  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "go = pd.read_csv('../GONN/GO/biological_process.csv')\n",
-    "go.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>GeneSymbol</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO_term</th>\n",
-       "      <th>GO_ID</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>'de novo' AMP biosynthetic process</th>\n",
-       "      <th>GO:0044208</th>\n",
-       "      <td>[ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>'de novo' CTP biosynthetic process</th>\n",
-       "      <th>GO:0044210</th>\n",
-       "      <td>[CTPS1, CTPS2]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>'de novo' GDP-L-fucose biosynthetic process</th>\n",
-       "      <th>GO:0042351</th>\n",
-       "      <td>[GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>'de novo' IMP biosynthetic process</th>\n",
-       "      <th>GO:0006189</th>\n",
-       "      <td>[ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>'de novo' L-methionine biosynthetic process</th>\n",
-       "      <th>GO:0071266</th>\n",
-       "      <td>[CTH]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                         GeneSymbol\n",
-       "GO_term                                     GO_ID                                                  \n",
-       "'de novo' AMP biosynthetic process          GO:0044208     [ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]\n",
-       "'de novo' CTP biosynthetic process          GO:0044210                               [CTPS1, CTPS2]\n",
-       "'de novo' GDP-L-fucose biosynthetic process GO:0042351            [GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
-       "'de novo' IMP biosynthetic process          GO:0006189  [ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]\n",
-       "'de novo' L-methionine biosynthetic process GO:0071266                                        [CTH]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "go = (go.groupby(['GO_term', 'GO_ID'])['GeneSymbol'].apply(list)).to_frame()\n",
-    "go.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GeneSymbol</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>GO:0044208: 'de novo' AMP biosynthetic process</th>\n",
-       "      <td>[ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0044210: 'de novo' CTP biosynthetic process</th>\n",
-       "      <td>[CTPS1, CTPS2]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0042351: 'de novo' GDP-L-fucose biosynthetic process</th>\n",
-       "      <td>[GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0006189: 'de novo' IMP biosynthetic process</th>\n",
-       "      <td>[ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0071266: 'de novo' L-methionine biosynthetic process</th>\n",
-       "      <td>[CTH]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                     GeneSymbol\n",
-       "GO:0044208: 'de novo' AMP biosynthetic process         [ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]\n",
-       "GO:0044210: 'de novo' CTP biosynthetic process                                   [CTPS1, CTPS2]\n",
-       "GO:0042351: 'de novo' GDP-L-fucose biosynthetic...            [GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
-       "GO:0006189: 'de novo' IMP biosynthetic process      [ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]\n",
-       "GO:0071266: 'de novo' L-methionine biosynthetic...                                        [CTH]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "go.index = go.reset_index()['GO_ID'].map(str) + ': ' + go.reset_index()['GO_term']\n",
-    "go.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "go.to_json('/Users/alex/Documents/abcd1/go_biological_process_genes.json')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## IV. Serialize Normalized Counts to JSON"
+    "## III. Serialize Normalized Counts to JSON"
    ]
   },
   {
