rename some stuff, move some stuff around, other data volcano plots, etc...

--- a/Serialize_DESeq_Data_to_JSON.ipynb
+++ b/Serialize_DESeq_Data_to_JSON.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,20 +137,20 @@
        "RHOB    10401.154292 -1.758295  0.045384   38.742385      0.0    0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "human = pd.read_csv('DESeq2/Yamuna/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj']).set_index('GeneID')\n",
+    "human = pd.read_csv('DESeq2_data/Yamuna/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj']).set_index('GeneID')\n",
     "human['log2(FC)'] = human['log2(FC)'] * -1\n",
     "human.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -277,24 +277,161 @@
        "Selp    1.416603e-148  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mouse = pd.read_csv('DESeq2/Yamuna/Mouse_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj']).set_index('GeneID')\n",
+    "mouse = pd.read_csv('DESeq2_data/Yamuna/Mouse_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj']).set_index('GeneID')\n",
     "mouse['log2(FC)'] = mouse['log2(FC)'] * -1\n",
     "mouse.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "mouse['log2(FC)'].to_json('./web/mouse_logFC.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Base mean</th>\n",
+       "      <th>log2(FC)</th>\n",
+       "      <th>StdErr</th>\n",
+       "      <th>Wald-Stats</th>\n",
+       "      <th>P-value</th>\n",
+       "      <th>P-adj</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GeneID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CTSF</th>\n",
+       "      <td>530.623969</td>\n",
+       "      <td>7.625389</td>\n",
+       "      <td>0.305383</td>\n",
+       "      <td>24.969883</td>\n",
+       "      <td>1.298958e-137</td>\n",
+       "      <td>3.458606e-133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AC006039.4</th>\n",
+       "      <td>69.056857</td>\n",
+       "      <td>2.395232</td>\n",
+       "      <td>0.188938</td>\n",
+       "      <td>12.677335</td>\n",
+       "      <td>7.897114e-37</td>\n",
+       "      <td>1.051343e-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PRSS12</th>\n",
+       "      <td>5631.132313</td>\n",
+       "      <td>2.155079</td>\n",
+       "      <td>0.171747</td>\n",
+       "      <td>12.548020</td>\n",
+       "      <td>4.075745e-36</td>\n",
+       "      <td>3.617360e-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOX7</th>\n",
+       "      <td>612.479651</td>\n",
+       "      <td>2.390252</td>\n",
+       "      <td>0.203622</td>\n",
+       "      <td>11.738663</td>\n",
+       "      <td>8.075288e-32</td>\n",
+       "      <td>5.375316e-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SLC1A6</th>\n",
+       "      <td>345.256285</td>\n",
+       "      <td>2.108443</td>\n",
+       "      <td>0.181737</td>\n",
+       "      <td>11.601616</td>\n",
+       "      <td>4.043717e-31</td>\n",
+       "      <td>2.153360e-27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Base mean  log2(FC)    StdErr  Wald-Stats        P-value  \\\n",
+       "GeneID                                                                   \n",
+       "CTSF         530.623969  7.625389  0.305383   24.969883  1.298958e-137   \n",
+       "AC006039.4    69.056857  2.395232  0.188938   12.677335   7.897114e-37   \n",
+       "PRSS12      5631.132313  2.155079  0.171747   12.548020   4.075745e-36   \n",
+       "SOX7         612.479651  2.390252  0.203622   11.738663   8.075288e-32   \n",
+       "SLC1A6       345.256285  2.108443  0.181737   11.601616   4.043717e-31   \n",
+       "\n",
+       "                    P-adj  \n",
+       "GeneID                     \n",
+       "CTSF        3.458606e-133  \n",
+       "AC006039.4   1.051343e-32  \n",
+       "PRSS12       3.617360e-32  \n",
+       "SOX7         5.375316e-28  \n",
+       "SLC1A6       2.153360e-27  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lee = pd.read_csv('DESeq2_data/Lee/Lee_DESeq2.tsv', sep='\\t', header=None, names=['GeneID','Base mean','log2(FC)','StdErr','Wald-Stats','P-value','P-adj']).set_index('GeneID')\n",
+    "lee.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lee['log2(FC)'].to_json('./web/lee_logFC.json')"
    ]
   },
   {
@@ -313,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -389,11 +526,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "mouse[['logFC', 'q']].to_json('./web/mouse_logFC_qVal.json', orient='index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max q-val: 132.461098939\n"
+     ]
+    }
+   ],
+   "source": [
+    "lee['q'] = -np.log10(lee['P-adj'])\n",
+    "lee_max_finite_log_qVal = np.max(lee['q'][np.isfinite(lee['q'])])\n",
+    "lee['q'] = np.around(np.clip(lee['q'], 0, lee_max_finite_log_qVal), decimals=3)\n",
+    "print(\"max q-val: \" + str(lee_max_finite_log_qVal))\n",
+    "\n",
+    "lee['logFC'] = np.around(lee['log2(FC)'], decimals=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lee[['logFC', 'q']].to_json('./web/lee_logFC_qVal.json', orient='index')"
    ]
   },
   {
@@ -412,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -510,19 +685,19 @@
        "MIR1302-2          0.000       0.000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "human = pd.read_csv('DESeq2/Yamuna/Normalized_counts_Yamuna_human.tsv', sep='\\t', index_col=0).round(3)\n",
+    "human = pd.read_csv('DESeq2_data/Yamuna/Normalized_counts_Yamuna_human.tsv', sep='\\t', index_col=0).round(3)\n",
     "human.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -638,24 +813,59 @@
        "RP23-317L18.4         0.0         0.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mouse = pd.read_csv('DESeq2/Yamuna/Normalized_counts_Yamuna_mouse.tsv', sep='\\t', index_col=0).round(3)\n",
+    "mouse = pd.read_csv('DESeq2_data/Yamuna/Normalized_counts_Yamuna_mouse.tsv', sep='\\t', index_col=0).round(3)\n",
     "mouse.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "mouse.to_json('./web/mouse_counts.json')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
