--- a/Serialize_Gene_Sets_to_JSON.ipynb
+++ b/Serialize_Gene_Sets_to_JSON.ipynb
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "go.to_json('/Users/alex/Documents/abcd1/go_biological_process_genes.json')"
+    "go.to_json('/Users/alex/Documents/abcd1/json/go_biological_process_genes.json')"
    ]
   },
   {
@@ -611,7 +611,293 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat([go, msigdb])['GeneSymbol'].to_json('/Users/alex/Documents/abcd1/all_gene_sets.json')"
+    "pd.concat([go, msigdb])['GeneSymbol'].to_json('/Users/alex/Documents/abcd1/json/all_gene_sets.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. Serialize Mouse Gene Ontology to JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tax_id</th>\n",
+       "      <th>GeneSymbol</th>\n",
+       "      <th>GO_ID</th>\n",
+       "      <th>Evidence</th>\n",
+       "      <th>GO_term</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10090</td>\n",
+       "      <td>0610005C13Rik</td>\n",
+       "      <td>GO:0003674</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>molecular_function</td>\n",
+       "      <td>Function</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10090</td>\n",
+       "      <td>0610005C13Rik</td>\n",
+       "      <td>GO:0005575</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>cellular_component</td>\n",
+       "      <td>Component</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10090</td>\n",
+       "      <td>0610005C13Rik</td>\n",
+       "      <td>GO:0008150</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>biological_process</td>\n",
+       "      <td>Process</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10090</td>\n",
+       "      <td>0610006L08Rik</td>\n",
+       "      <td>GO:0003674</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>molecular_function</td>\n",
+       "      <td>Function</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10090</td>\n",
+       "      <td>0610006L08Rik</td>\n",
+       "      <td>GO:0005575</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>cellular_component</td>\n",
+       "      <td>Component</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tax_id     GeneSymbol       GO_ID Evidence             GO_term   Category\n",
+       "0   10090  0610005C13Rik  GO:0003674       ND  molecular_function   Function\n",
+       "1   10090  0610005C13Rik  GO:0005575       ND  cellular_component  Component\n",
+       "2   10090  0610005C13Rik  GO:0008150       ND  biological_process    Process\n",
+       "3   10090  0610006L08Rik  GO:0003674       ND  molecular_function   Function\n",
+       "4   10090  0610006L08Rik  GO:0005575       ND  cellular_component  Component"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "go = pd.read_csv('../../Desktop/mouse_go/mouse2go.csv')\n",
+    "go.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go = go[go.Category == 'Process']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>GeneSymbol</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GO_term</th>\n",
+       "      <th>GO_ID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'de novo' AMP biosynthetic process</th>\n",
+       "      <th>GO:0044208</th>\n",
+       "      <td>[Adsl, Adss, Adssl1]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' GDP-L-fucose biosynthetic process</th>\n",
+       "      <th>GO:0042351</th>\n",
+       "      <td>[Tsta3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' IMP biosynthetic process</th>\n",
+       "      <th>GO:0006189</th>\n",
+       "      <td>[Atic, Gart, Paics, Pfas]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' L-methionine biosynthetic process</th>\n",
+       "      <th>GO:0071266</th>\n",
+       "      <td>[Cth]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' NAD biosynthetic process from aspartate</th>\n",
+       "      <th>GO:0034628</th>\n",
+       "      <td>[Nmnat1, Nmnat2, Nmnat3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                             GeneSymbol\n",
+       "GO_term                                           GO_ID                                \n",
+       "'de novo' AMP biosynthetic process                GO:0044208       [Adsl, Adss, Adssl1]\n",
+       "'de novo' GDP-L-fucose biosynthetic process       GO:0042351                    [Tsta3]\n",
+       "'de novo' IMP biosynthetic process                GO:0006189  [Atic, Gart, Paics, Pfas]\n",
+       "'de novo' L-methionine biosynthetic process       GO:0071266                      [Cth]\n",
+       "'de novo' NAD biosynthetic process from aspartate GO:0034628   [Nmnat1, Nmnat2, Nmnat3]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "go = (go.groupby(['GO_term', 'GO_ID'])['GeneSymbol'].apply(list)).to_frame()\n",
+    "go.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GeneSymbol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>'de novo' AMP biosynthetic process (GO:0044208)</th>\n",
+       "      <td>[Adsl, Adss, Adssl1]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' GDP-L-fucose biosynthetic process (GO:0042351)</th>\n",
+       "      <td>[Tsta3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' IMP biosynthetic process (GO:0006189)</th>\n",
+       "      <td>[Atic, Gart, Paics, Pfas]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' L-methionine biosynthetic process (GO:0071266)</th>\n",
+       "      <td>[Cth]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>'de novo' NAD biosynthetic process from aspartate (GO:0034628)</th>\n",
+       "      <td>[Nmnat1, Nmnat2, Nmnat3]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   GeneSymbol\n",
+       "'de novo' AMP biosynthetic process (GO:0044208)          [Adsl, Adss, Adssl1]\n",
+       "'de novo' GDP-L-fucose biosynthetic process (GO...                    [Tsta3]\n",
+       "'de novo' IMP biosynthetic process (GO:0006189)     [Atic, Gart, Paics, Pfas]\n",
+       "'de novo' L-methionine biosynthetic process (GO...                      [Cth]\n",
+       "'de novo' NAD biosynthetic process from asparta...   [Nmnat1, Nmnat2, Nmnat3]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "go.index = go.reset_index()['GO_term'].map(str) + ' (' + go.reset_index()['GO_ID'] + ')'\n",
+    "go.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go.to_json('/Users/alex/Documents/abcd1/json/mouse_biological_process_genes.json')"
    ]
   },
   {
